# internal/routers/api/v1/tag.go
@@ -17,7 +17,7 @@ func (t Tag) Get(c *gin.Context) {}
 // @Param state query int false "状态" Enums(0, 1) default(1)
 // @Param page query int false "页码"
 // @Param page_size query int false "每页数量"
-// @Success 200 {object} model.Tag "成功"
+// @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Errors "请求错误"
 // @Failure 500 {object} errcode.Errors "内部错误"
 // @Router /api/v1/tags [get]
@@ -28,7 +28,7 @@ func (t Tag) List(c *gin.Context) {}
 // @Param name body string true "标签名称" minlength(3) maxlength(100)
 // @Param state body int false "状态" Enums(0, 1) default(1)
 // @Param created_by body string true "创建者" minlength(3) maxlength(100)
-// @Success 200 {object} model.Tag "成功"
+// @Success 200 {object} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Errors "请求错误"
 // @Failure 500 {object} errcode.Errors "内部错误"
 // @Router /api/v1/tags [post]
@@ -40,7 +40,7 @@ func (t Tag) Create(c *gin.Context) {}
 // @Param name body string false "标签名称" minlength(3) maxlength(100)
 // @Param state body int false "状态" Enums(0, 1) default(1)
 // @Param modified_by body string true "修改者" minlength(3) maxlength(100)
-// @Success 200 {array} model.Tag "成功"
+// @Success 200 {array} model.TagSwagger "成功"
 // @Failure 400 {object} errcode.Errors "请求错误"
 // @Failure 500 {object} errcode.Errors "内部错误"
 // @Router /api/v1/tags/{id} [put]
